# conversation-data-curator

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  example.db  package-lock.json  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: python-application.yaml
alembic/versions/: 41fb9eb8bce1_create_messages_table.py  91f22d35301a_create_codes_table.py  997b8a992b91_create_annotations_relationship.py
app/: README.md  package-lock.json  package.json  tsconfig.json
app/src/: App.vue  main.ts  types.ts
app/src/components/: CRUDTable.vue
app/src/router/: index.ts
app/src/views/: AnnotationView.vue  CodeView.vue  HomeView.vue  MessageView.vue
backend/: config.py  crud.py  database.py  exceptions.py  main.py  models.py  schemas.py
src/: api.py  config.py  crud.py  database.py  main.py
tests/: dummy_test.py  main.py
