[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Harry Knighton", email = "harryknighton01@gmail.com"},
]
dependencies = [
    "pytest>=7.4.2",
    "pre-commit>=3.4.0",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "flake8-bugbear>=23.9.16",
    "flake8-comprehensions>=3.14.0",
    "flake8-docstrings>=1.7.0",
    "flake8-simplify>=0.21.0",
    "mypy>=1.5.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = ""}
