[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Harry Knighton", email = "harryknighton01@gmail.com"},
]
dependencies = [
    "pytest>=7.4.2",
    "pre-commit>=3.4.0",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "flake8-bugbear>=23.9.16",
    "flake8-comprehensions>=3.14.0",
    "flake8-docstrings>=1.7.0",
    "flake8-simplify>=0.21.0",
    "mypy>=1.5.1",
    "isort>=5.12.0",
    "sqlalchemy>=2.0.21",
    "pydantic>=2.4.2",
    "alembic>=1.12.0",
    "fastapi>=0.103.2",
    "uvicorn>=0.23.2",
    "httpx>=0.25.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = ""}
